--- a/css/resume.css
+++ b/css/resume.css
@@ -176,17 +176,17 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: rgb(56, 109, 189) !important;
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: rgb(56, 109, 189) !important;
 }
 
 a {
-  color: #BD5D38;
+  color:  rgb(56, 109, 189);
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color:  rgb(37, 87, 161);
 }
